syntax = "proto3";

service chord {
    rpc Alive (alive) returns (alive) {}
    rpc Notify (NewTarget) returns (alive) {}
    rpc Shutdown (Empty) returns (Empty) {}
}

message Empty {

}

message NewTarget {
    int32 from = 1;
    int32 to = 2;
}

message Node {
    string ID = 1;
    string ip_address = 2;
    string rpc_port = 3;
}

message alive {
    bool is_alive = 1;
    int32 target = 2;
    repeated Node nodes = 3;
}

message ToNode {
    oneof msg {
        bool shutdown = 1;
    }
}

message FromNode {
    oneof msg {
        bool ok = 1;
    }
}
